@@ -50,21 +50,60 @@ public class EntryCacheUpdaterTest extends TestCase {
     assertEquals(4, entryCache.getSize());
   }
 
+  public void testInitialUpdate() throws Exception {
+    final EntryCache entryCache = new EntryCacheImpl(new File("test"));
+    entryCache.init();
+    assertEquals(0, entryCache.getSize());
+
+    final List<SVNLogEntry> logEntries = new ArrayList<SVNLogEntry>();
+    logEntries.add(new SVNLogEntry(Collections.EMPTY_MAP, 1, "author", new Date(), "Log message for revision 1."));
+
+    final ConfigDirectory configDirectory = TestUtils.getTestConfigDirectory();
+    configDirectory.setCreateDirectories(false);
+    final MockServletContext servletContext = new MockServletContext();
+    servletContext.setContextPath("sventon-test");
+    configDirectory.setServletContext(servletContext);
+    final Application application = new Application(configDirectory, TestUtils.CONFIG_FILE_NAME);
+
+    final EntryCacheUpdater cacheUpdater = new EntryCacheUpdater(null, application);
+    cacheUpdater.setFlushThreshold(2);
+    cacheUpdater.setRepositoryService(new RepositoryServiceImpl());
+    cacheUpdater.updateInternal(entryCache, new TestRepository(),
+        new RevisionUpdate(new RepositoryName("defaultsvn"), logEntries, false, false));
+
+    assertEquals(3, entryCache.getSize());
+  }
 
   private static class TestRepository extends SVNRepositoryStub {
     private final Map<String, SVNDirEntry> entriesMap = new HashMap<String, SVNDirEntry>();
 
     public TestRepository() throws SVNException {
-      entriesMap.put("/file1.java#123", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/file1.java"), null, "file1.java", SVNNodeKind.FILE, 12345, false, 123, new Date(), "author"));
-      entriesMap.put("/file2.abc#123", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/file2.abc"), null, "file2.abc", SVNNodeKind.FILE, 12345, false, 123, new Date(), "author"));
-      entriesMap.put("/trunk#123", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/trunk"), null, "trunk", SVNNodeKind.FILE, 12345, false, 123, new Date(), "author"));
-      entriesMap.put("/trunk/file3.def#123", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/trunk/file3.def"), null, "file3.def", SVNNodeKind.FILE, 12345, false, 123, new Date(), "author"));
-      entriesMap.put("/branch#124", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/branch"), null, "branch", SVNNodeKind.FILE, 12345, false, 124, new Date(), "author"));
+      entriesMap.put("/file1.java@123", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/file1.java"), null, "file1.java", SVNNodeKind.FILE, 12345, false, 123, new Date(), "author"));
+      entriesMap.put("/file2.abc@123", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/file2.abc"), null, "file2.abc", SVNNodeKind.FILE, 12345, false, 123, new Date(), "author"));
+      entriesMap.put("/trunk@123", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/trunk"), null, "trunk", SVNNodeKind.FILE, 12345, false, 123, new Date(), "author"));
+      entriesMap.put("/trunk/file3.def@123", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/trunk/file3.def"), null, "file3.def", SVNNodeKind.FILE, 12345, false, 123, new Date(), "author"));
+      entriesMap.put("/branch@124", new SVNDirEntry(SVNURL.parseURIDecoded("http://localhost/repo/branch"), null, "branch", SVNNodeKind.FILE, 12345, false, 124, new Date(), "author"));
     }
 
     @Override
     public SVNDirEntry info(final String path, final long revision) throws SVNException {
-      return entriesMap.get(path + "#" + revision);
+      return entriesMap.get(path + "@" + revision);
+    }
+
+    @Override
+    public long getLatestRevision() throws SVNException {
+      return 2;
+    }
+
+    @Override
+    public Collection<SVNDirEntry> getDir(String path, long revision, SVNProperties properties, Collection collection) throws SVNException {
+      final List<SVNDirEntry> entries = new ArrayList<SVNDirEntry>();
+      if ("/".equals(path)) {
+        entries.add(new SVNDirEntry(null, null, "branches", SVNNodeKind.DIR, 0, false, 1, new Date(), "jesper"));
+        entries.add(new SVNDirEntry(null, null, "trunk", SVNNodeKind.DIR, 0, false, 1, new Date(), "jesper"));
+        entries.add(new SVNDirEntry(null, null, "tags", SVNNodeKind.DIR, 0, false, 1, new Date(), "jesper"));
+      }
+      return entries;
     }
   }
 }
