@@ -1,6 +1,8 @@
 sventon change history
 -----------------------------------------------------------------------------------------
 
+[1597] Fixed: Bug #15842 - High memory consumption when populating cache.
+
 [1588] Release 2.1.2 (2009-06-07)
 [1582] Added: Upgraded to SVNKit 1.3.0 (5903).
        Fixed: Bug #15779 - SVNKit serialization problem.
